# EE6470_final_project_Q2

./: README.md
sw/basic-debug-printf/: Makefile  main_printf.c
sw/basic-dma-printf/: Makefile  main.c
sw/basic-multicore-printf/: Makefile  main_printf.c
sw/basic-nn/: Makefile  main.cpp  patterns.h
sw/basic-single/: Makefile  main.cpp
sw/c++-lib/: Makefile  main.cpp
sw/pi-multicore-printf/: Makefile
vp/src/platform/basic-acc/: NeuralNetwork.h  filter_def.h  main.cpp
vp/src/platform/basic-single/: CMakeLists.txt  DoubleFilter.h  filter_def.h  main.cpp  weights.h
